--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "subexpo",
+    "name": "local-node-scripts",
     "version": "0.2.0",
     "license": "MIT",
     "scripts": {
@@ -10,9 +10,12 @@
     },
     "dependencies": {
         "@polkadot/api": "^8",
-        "parity-scale-codec": "^0.4.2"
+        "parity-scale-codec": "^0.4.2",
+        "as-scale-codec": "^0.2.3",
+        "spinnies": "^0.5.1"
     },
     "devDependencies": {
+        "@types/spinnies": "^0.5.0",
         "@types/node": "17.0.21",
         "@typescript-eslint/eslint-plugin": "^5.15.0",
         "@typescript-eslint/parser": "^5.15.0",
